# cudann

./: CMakeLists.txt  README.md
include/mnist/: mnist_reader.hpp
lic/: mnist_reader_license.txt
src/: activation_functions.h  cuda_profile.h  cuda_utility.cpp  cuda_utility.h  e_matrix.h  gpu_defines.h  gpu_matrix.cpp  gpu_matrix.h  gpu_scalar.cpp  gpu_scalar.h  input_parser.h  kernels_gpu.cu  kernels_gpu.h  layers_cpu.cpp  layers_cpu.h  layers_gpu.cu  layers_gpu.h  main.cpp  main_util.cpp  main_util.h  model.h  neural_net_cpu.cpp  neural_net_cpu.h  neural_net_gpu.cpp  neural_net_gpu.h  profiling.cpp  profiling.h  test_cpu.cpp  test_cpu.h  test_gpu.cpp  test_gpu.h  test_util.cpp  test_util.h  utility.cpp  utility.h
